align images for mobile in the center and fixed header size

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 .header {
     margin-bottom:15px;
 }
+.header .background {
+    height:200px;
+    background:url(http://lorempixel.com/1140/200) 50% 50%;
+    position:relative;
+}
 .footer {
     margin-top:15px;
 }
@@ -10,14 +15,23 @@
 .navigation {
     position:absolute;
     bottom:0px;
-    left:15px;
+    left:0px;
     background:rgba(255,255,255,0.7);
     padding:15px;
     width:100%;
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1200px) {
     .text-content {
         margin: 0 0 15px 0;
+    }
+}
+
+@media (max-width:768px) {
+    .header .background {
+        height:100px;
+    }
+    .image-content {
+        text-align:center;
     }
 }
